# windows-volume-limiter

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  data.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs  wasapi.rs  windows.rs
